<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/calculatorRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <FrameLayout
        android:id="@+id/frameDisplay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="8dp">
        <TextView
            android:id="@+id/tvDisplay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="0"
            android:textSize="32sp"
            android:gravity="end"
            android:background="@drawable/display_bg"
            android:padding="16dp"/>
    </FrameLayout>

    <GridLayout
        android:id="@+id/gridButtons"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/frameDisplay"
        app:layout_constraintBottom_toTopOf="@id/linearExtra"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:columnCount="4"
        android:rowCount="5">

        <Button
            android:id="@+id/btnClear"
            style="@style/CalcButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="C"/>
        <Button
            android:id="@+id/btnSign"
            style="@style/CalcButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="+/-"/>
        <Button
            android:id="@+id/btnDot"
            style="@style/CalcButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="."/>
        <Button
            android:id="@+id/btnInfo"
            style="@style/CalcButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/btn_info"/>

        <Button
            android:id="@+id/btn7"
            style="@style/CalcButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="7"/>
        <Button
            android:id="@+id/btn8"
            style="@style/CalcButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="8"/>
        <Button
            android:id="@+id/btn9"
            style="@style/CalcButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="9"/>
        <Button
            android:id="@+id/btnConvertUK"
            style="@style/CalcButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/btn_convert_uk"/>

        <Button
            android:id="@+id/btn4"
            style="@style/CalcButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="4"/>
        <Button
            android:id="@+id/btn5"
            style="@style/CalcButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="5"/>
        <Button
            android:id="@+id/btn6"
            style="@style/CalcButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="6"/>
        <Button
            android:id="@+id/btnConvertUS"
            style="@style/CalcButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/btn_convert_us"/>

        <Button
            android:id="@+id/btn1"
            style="@style/CalcButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="1"/>
        <Button
            android:id="@+id/btn2"
            style="@style/CalcButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="2"/>
        <Button
            android:id="@+id/btn3"
            style="@style/CalcButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="3"/>
        <CheckBox
            android:id="@+id/checkAdvanced"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/advanced_mode"
            android:layout_columnWeight="1"/>

        <Button
            android:id="@+id/btn0"
            style="@style/CalcButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:layout_columnWeight="2"
            android:text="0"/>
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"/>
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"/>
    </GridLayout>

    <LinearLayout
        android:id="@+id/linearExtra"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="8dp">
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
